# ndg

./: .clippy.toml  .editorconfig  .envrc  .gitattributes  .gitignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  CNAME  Cargo.nix  Cargo.toml  FRONTMATTER.html  Justfile  LICENSE  POSTPROCESSING.html  README.md  SEARCH.html  SIDEBAR.html  SYNTAX.md  TEMPLATING.html  crates.js  default.nix  deno.json  deno.jsonc  deny.toml  flake.nix  help.html  index.html  search-index.js  search.html  settings.html  shell.nix  src-files.js  test-badge.json
.github/: deno.json  (+2 more)
crates/ndg-config/: Cargo.toml
crates/ndg-config/src/: anchor.rs  assets.rs  config.rs  error.rs  index.rs  lib.rs  markdown.rs  matchers.rs  meta.rs  options.rs  postprocess.rs  search.rs  sidebar.rs  templates.rs
crates/ndg-html/: Cargo.toml
crates/ndg-html/src/: lib.rs  libdoc.rs  nixdoc.rs  option_page_render.rs  option_pages.rs  option_toc.rs  options.rs  search.rs  template.rs  toc_tree.rs
crates/ndg-html/tests/: hierarchical_search.rs  html_template.rs  search_path_resolution.rs  search_widget.rs  search_widget_path.rs
crates/ndg-macros/: Cargo.toml
crates/ndg-macros/src/: lib.rs
crates/ndg-manpage/: Cargo.toml
crates/ndg-manpage/src/: escape.rs  lib.rs  options.rs  types.rs
crates/ndg-manpage/tests/: manpage_output.rs
crates/ndg-nixdoc/: Cargo.toml
crates/ndg-nixdoc/src/: error.rs  extractor.rs  lib.rs  types.rs
crates/ndg-pdf/: Cargo.toml
crates/ndg-pdf/src/: lib.rs
crates/ndg-pdf/tests/: pdf_output.rs
crates/ndg-templates/: Cargo.toml
crates/ndg-templates/src/: lib.rs
crates/ndg-templates/templates/: default.css  default.html  footer.html  lib.html  main.js  mobile-sidebar.css  navbar.html  options-pages.css  options.html  options_toc.html  search-worker.js  search-worker.test.js  search.html  search.js  search.test.js
crates/ndg-utils/: Cargo.toml
crates/ndg-utils/src/: assets.rs  html.rs  json.rs  lib.rs  markdown.rs  output.rs  postprocess.rs  xref.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
ndg/: Cargo.toml  README.md  all.html  build.rs  index.html  sidebar-items.js
ndg-commonmark/: Cargo.toml  README.md  SYNTAX.md
ndg-commonmark/docs/: HIGHLIGHTING.md  SYNTAX.md
ndg-commonmark/examples/: demo.rs  processor.rs  syntax.rs
ndg-commonmark/src/: extensions.rs  legacy_markdown.rs  legacy_markup.rs  lib.rs  processor.rs  types.rs  utils.rs
ndg-commonmark/src/processor/: core.rs  dom.rs  extensions.rs  mod.rs  process.rs  types.rs
ndg-commonmark/src/syntax/: error.rs  mod.rs  syntastica.rs  syntect.rs  types.rs
ndg-commonmark/src/utils/: codeblock.rs  mod.rs
ndg-commonmark/tests/: formatter_markup.rs  header_extraction.rs  integration.rs  integration_test.rs  markup.rs  markup_features.rs  processor.rs  prompt_transformer.rs  strip_markdown.rs  syntax.rs  test_processor.rs
ndg/benches/: markdown.rs  postprocess.rs
ndg/cli/: enum.Commands.html  index.html  struct.Cli.html
ndg/completion/: fn.generate_all.html  fn.generate_comp.html  fn.generate_manpage.html  index.html  sidebar-items.js
ndg/config/: fn.default_excluded_files.html  fn.default_footer_text.html  fn.default_input_dir.html  fn.default_options_toc_depth.html  fn.default_output_dir.html  fn.default_revision.html  fn.default_tab_style.html  fn.default_title.html  fn.default_true.html  index.html  sidebar-items.js  struct.Config.html
ndg/config/assets/: index.html  struct.AssetsConfig.html
ndg/config/meta/: index.html  struct.MetaConfig.html
ndg/config/postprocess/: index.html  struct.CssMinifyOptions.html  struct.HtmlMinifyOptions.html  struct.JsMinifyOptions.html  struct.PostprocessConfig.html
ndg/config/search/: index.html  struct.SearchConfig.html
ndg/config/sidebar/: enum.SidebarOrdering.html  fn.deserialize_match_field.html  index.html  struct.OptionNameMatch.html  struct.OptionsConfig.html  struct.OptionsMatch.html  struct.PathMatch.html  struct.SidebarConfig.html  struct.SidebarMatch.html  struct.TitleMatch.html  trait.MatchField.html
ndg/config/templates/: constant.DEFAULT_JSON_TEMPLATE.html  constant.DEFAULT_TOML_TEMPLATE.html  enum.TemplateError.html  fn.get_template.html  index.html  sidebar-items.js
ndg/docs/: FRONTMATTER.md  POSTPROCESSING.md  SEARCH.md  SIDEBAR.md  TEMPLATING.md
ndg/error/: enum.NdgError.html  index.html  sidebar-items.js
ndg/examples/: docs.rs  postprocess.rs
ndg/formatter/: index.html  sidebar-items.js
ndg/formatter/markdown/: index.html  struct.Header.html
ndg/formatter/markup/: fn.never_matching_regex.html  fn.safely_process_markup.html  index.html  sidebar-items.js
ndg/formatter/options/: fn.escape_html_in_markdown.html  fn.format_location.html  fn.process_options.html  index.html  sidebar-items.js  struct.NixOption.html
ndg/html/: index.html  sidebar-items.js
ndg/html/search/: fn.create_search_page.html  fn.extract_title.html  fn.extract_title_and_id.html  fn.generate_search_index.html  fn.tokenize.html  index.html  sidebar-items.js  struct.SearchAnchor.html  struct.SearchDocument.html  (+1 more)
ndg/manpage/: fn.escape_leading_dot.html  fn.escape_non_macro_lines.html  fn.generate_manpage.html  fn.get_roff_escapes.html  fn.man_escape.html  index.html  sidebar-items.js  static.ROFF_ESCAPES.html  static.TROFF_ESCAPE.html  static.TROFF_FORMATTING.html
ndg/src/: cli.rs  completion.rs  error.rs  lib.rs  main.rs  nrd.rs  serve.rs  utils.rs
ndg/templates/: default.css  default.html  lib.html  main.js  options.html  options_toc.html  search-worker.js  search.html  search.js
ndg/tests/: formatter_markup.rs  header_extraction.rs  hierarchical_search.rs  html_template.rs  integration.rs  manpage_output.rs  prompt_transformer.rs  search_path_resolution.rs  search_widget.rs  search_widget_path.rs
ndg/utils/: fn.collect_included_files.html  fn.copy_assets.html  fn.create_fallback_index.html  fn.create_processor_from_config.html  fn.ensure_index.html  fn.extract_page_title.html  fn.generate_options_manpage.html  fn.handle_generate_command.html  fn.process_markdown_files.html  fn.process_options_file.html  index.html  sidebar-items.js
(+7377 files in other folders)
