[workspace]
default-members = [ "ndg" ]
members         = [ "ndg", "ndg-commonmark", "xtask" ]
resolver        = "3"

[workspace.package]
authors      = [ "NotAShelf <raf@notashelf.dev>" ]
categories   = [ "text-processing" ]
edition      = "2024"
keywords     = [ "markdown", "nix", "nixpkgs", "nixos", "documentation" ]
license      = "MPL-2.0"
readme       = true
repository   = "https://github.com/feel-co/ndg"
rust-version = "1.85"
version      = "2.3.2"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "suggestions",
] }
clap_complete = "4.5.60"
clap_mangen = "0.2.31"
color-eyre = "0.6.5"
comrak = { version = "0.48.0", default-features = false, features = [ "syntect" ] }
env_logger = "0.11.8"
fs_extra = "1.3.0"
grass = { version = "0.13.4", default-features = false }
html-escape = "0.2.13"
html5ever = "0.36.1"
jiff = "0.2.16"
kuchikikiki = { git = "https://github.com/NotAShelf/kuchikikikiki.git" }
log = "0.4.28"
markup5ever = "0.36.1"
minifier = { version = "0.3.6", features = [ "html" ] }
ndg = { path = "./ndg" }
ndg-commonmark = { path = "./ndg-commonmark" }
num_cpus = "1.17.0"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = { version = "1.0.145", default-features = false, features = [ "preserve_order" ] }
syntect = "5.3.0"
tempfile = "3.23.0"
tendril = "0.4.3"
tera = { version = "1.20.1", default-features = false }
thiserror = "2.0.17"
toml = { version = "0.9.8", default-features = false, features = [ "parse", "serde" ] }
walkdir = "2.5.0"

[workspace.lints.clippy]
complexity                   = { level = "warn", priority = -1 }
nursery                      = { level = "warn", priority = -1 }
pedantic                     = { level = "warn", priority = -1 }
perf                         = { level = "warn", priority = -1 }
restriction                  = { level = "warn", priority = -1 }
style                        = { level = "warn", priority = -1 }
too_long_first_doc_paragraph = "allow"
too_many_lines               = "allow"


[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = "s"
panic         = "abort"
strip         = true

[profile.dev.package.backtrace]
opt-level = 3
