[workspace]
default-members = [ "ndg" ]
members         = [ "ndg", "ndg-commonmark", "xtask" ]
resolver        = "3"

[workspace.package]
authors      = [ "NotAShelf <raf@notashelf.dev>" ]
categories   = [ "text-processing" ]
edition      = "2024"
keywords     = [ "markdown", "nix", "nixpkgs", "nixos", "documentation" ]
license      = "MPL-2.0"
readme       = true
repository   = "https://github.com/feel-co/ndg"
rust-version = "1.90"
version      = "2.5.0-beta6"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "suggestions",
] }
clap_complete = "4.5.61"
clap_mangen = "0.2.31"
color-eyre = "0.6.5"
comrak = { version = "0.49.0", default-features = false, features = [ "syntect" ] }
env_logger = "0.11.8"
fs_extra = "1.3.0"
grass = { version = "0.13.4", default-features = false }
html-escape = "0.2.13"
html5ever = "0.36.1"
jiff = "0.2.16"
kuchikikiki = "0.9.1"
lightningcss = { version = "1.0.0-alpha.68", default-features = false }
log = "0.4.29"
markup5ever = "0.36.1"
minify-html = "0.18.1"
ndg = { path = "./ndg" }
ndg-commonmark = { path = "./ndg-commonmark" }
num_cpus = "1.17.0"
oxc_allocator = "0.104.0"
oxc_codegen = "0.104.0"
oxc_minifier = "0.104.0"
oxc_parser = "0.104.0"
oxc_span = "0.104.0"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = { version = "1.0.145", default-features = false, features = [ "preserve_order" ] }
syntect = "5.3.0"
tempfile = "3.23.0"
tendril = "0.4.3"
tera = { version = "1.20.1", default-features = false }
thiserror = "2.0.17"
toml = { version = "0.9.8", default-features = false, features = [ "parse", "serde" ] }
walkdir = "2.5.0"

# See:
#  <https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html>
[workspace.lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
pedantic   = { level = "warn", priority = -1 }
perf       = { level = "warn", priority = -1 }
style      = { level = "warn", priority = -1 }

# The lint groups above enable some less-than-desirable rules, we should manually
# enable those to keep our sanity.
absolute_paths                       = "allow"
arbitrary_source_item_ordering       = "allow"
clone_on_ref_ptr                     = "warn"
dbg_macro                            = "warn"
empty_drop                           = "warn"
empty_structs_with_brackets          = "warn"
exit                                 = "warn"
filetype_is_file                     = "warn"
get_unwrap                           = "warn"
implicit_return                      = "allow"
infinite_loop                        = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_docs_in_private_items        = "allow"
multiple_crate_versions              = "allow" # :(
non_ascii_literal                    = "allow"
non_std_lazy_statics                 = "warn"
pathbuf_init_then_push               = "warn"
pattern_type_mismatch                = "allow"
question_mark_used                   = "allow"
rc_buffer                            = "warn"
rc_mutex                             = "warn"
rest_pat_in_fully_bound_structs      = "warn"
similar_names                        = "allow"
single_call_fn                       = "allow"
std_instead_of_core                  = "allow"
too_long_first_doc_paragraph         = "allow"
too_many_lines                       = "allow"
undocumented_unsafe_blocks           = "warn"
unnecessary_safety_comment           = "warn"
unused_result_ok                     = "warn"
unused_trait_names                   = "allow"

# False positive:
# clippy's build script check doesn't recognize workspace-inherited metadata
# which means in our current workspace layout, we get pranked by Clippy.
cargo_common_metadata = "allow"

# In the honor of a recent Cloudflare regression
panic       = "deny"
unwrap_used = "deny"

# Less dangerous, but we'd like to know
# Those must be opt-in, and are fine ONLY in tests and examples. We *can* panic
# in NDG (the binary crate), but it should be very deliberate
expect_used   = "warn"
print_stderr  = "warn"
print_stdout  = "warn"
todo          = "warn"
unimplemented = "warn"
unreachable   = "warn"

[profile.dev]
debug     = true
opt-level = 0

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"
strip         = "symbols"

[profile.dev.package.backtrace]
opt-level = 3
