[package]
name                   = "ndg-commonmark"
description            = "Flavored CommonMark processor for Nix-related projects, with support for CommonMark, GFM, and Nixpkgs extensions."
authors.workspace      = true
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "../README.md"
categories.workspace   = true
keywords.workspace     = true

[lib]
name = "ndg_commonmark"
path = "src/lib.rs"

[features]
default      = [ "ndg-flavored" ]
gfm          = [  ]
ndg-flavored = [ "gfm", "nixpkgs", "syntastica" ]
nixpkgs      = [  ]
syntastica   = [ "dep:syntastica", "dep:syntastica-core", "dep:syntastica-parsers", "dep:syntastica-themes" ]
syntect      = [ "dep:syntect" ]

[dependencies]
anyhow.workspace      = true
comrak.workspace      = true
html5ever.workspace   = true
kuchikikiki.workspace = true
log.workspace         = true
markup5ever.workspace = true
regex.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
syntastica            = { version = "0.6.1", optional = true }
syntastica-core       = { version = "0.6.1", optional = true }
syntastica-parsers    = { version = "0.6.1", features = [ "all" ], optional = true }
syntastica-themes     = { version = "0.6.1", optional = true }
syntect               = { workspace = true, optional = true }
tendril.workspace     = true
thiserror.workspace   = true
walkdir.workspace     = true

[dev-dependencies]
tempfile = "3.22.0"
