[package]
name                   = "ndg-commonmark"
description            = "Flavored CommonMark processor for Nix-related projects, with support for CommonMark, GFM, and Nixpkgs extensions."
authors.workspace      = true
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "./README.md"
license.workspace      = true
categories.workspace   = true
keywords.workspace     = true

[lib]
name = "ndg_commonmark"
path = "src/lib.rs"

[features]
default      = [ "ndg-flavored", "syntastica" ]
gfm          = [  ]
ndg-flavored = [ "gfm", "nixpkgs" ]
nixpkgs      = [  ]
syntastica   = [ "dep:syntastica", "dep:syntastica-core", "dep:syntastica-parsers", "dep:syntastica-themes" ]
syntect      = [ "dep:syntect", "dep:two-face" ]

[dependencies]
comrak.workspace      = true
html-escape.workspace = true
kuchikikiki.workspace = true
log.workspace         = true
markup5ever.workspace = true
regex.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
syntastica            = { version = "0.6.1", optional = true }
syntastica-core       = { version = "0.6.1", optional = true }
syntastica-parsers    = { version = "0.6.1", features = [ "all" ], optional = true }
syntastica-themes     = { version = "0.6.1", optional = true }
syntect               = { workspace = true, optional = true }
tendril.workspace     = true
thiserror.workspace   = true
two-face              = { version = "0.4.5", optional = true, features = [ "syntect-default-onig" ] }
walkdir.workspace     = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = [ "-Zunstable-options", "-Zrustdoc-scrape-examples" ]
