[package]
name                   = "ndg"
description            = "Platform agnostic documentation generator for Nix/NixOS and Nixpkgs module systems"
authors.workspace      = true
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "./README.md"
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[features]
default = [  ]
serve   = [ "dep:axum", "dep:tokio", "dep:tower-http" ]

[dependencies]
ndg-commonmark.workspace = true
ndg-config.workspace     = true
ndg-html.workspace       = true
ndg-manpage.workspace    = true
ndg-nixdoc.workspace     = true
ndg-utils.workspace      = true

clap.workspace                = true
clap-verbosity-flag.workspace = true
color-eyre.workspace          = true
env_logger.workspace          = true
html-escape.workspace         = true
indicatif.workspace           = true
jiff.workspace                = true
log.workspace                 = true
num_cpus.workspace            = true
rayon.workspace               = true
regex.workspace               = true
serde.workspace               = true
serde_json.workspace          = true
tera.workspace                = true
thiserror.workspace           = true
toml.workspace                = true

axum       = { workspace = true, optional = true, features = [ "tokio", "http1" ] }
tokio      = { workspace = true, optional = true, features = [ "rt-multi-thread", "net" ] }
tower-http = { workspace = true, optional = true, features = [ "fs" ] }

[dev-dependencies]
comrak.workspace    = true
criterion.workspace = true
tempfile.workspace  = true

[[bench]]
harness = false
name    = "postprocess"

[lints]
workspace = true
