[package]
name                   = "ndg"
description            = "Platform agnostic documentation generator for Nix/NixOS and Nixpkgs module systems"
readme                 = "./README.md"
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[features]
default            = [ "commonmark-ndg" ]
commonmark-ndg     = [
  "ndg-commonmark/ndg-flavored",
  "ndg-commonmark/syntastica",
  "ndg-config/commonmark-ndg",
  "ndg-html/commonmark-ndg",
  "ndg-manpage/commonmark-ndg",
  "ndg-pdf/commonmark-ndg",
  "ndg-utils/commonmark-ndg",
]
commonmark-nixpkgs = [
  "ndg-commonmark/nixpkgs",
  "ndg-config/commonmark-nixpkgs",
  "ndg-html/commonmark-nixpkgs",
  "ndg-manpage/commonmark-nixpkgs",
  "ndg-pdf/commonmark-nixpkgs",
  "ndg-utils/commonmark-nixpkgs",
]
nrd                = [ "commonmark-nixpkgs" ]
serve              = [ "dep:axum", "dep:tokio", "dep:tower-http" ]

[dependencies]
ndg-commonmark.workspace = true
ndg-config.workspace     = true
ndg-html.workspace       = true
ndg-manpage.workspace    = true
ndg-nixdoc.workspace     = true
ndg-pdf.workspace        = true
ndg-utils.workspace      = true

clap.workspace                = true
clap-verbosity-flag.workspace = true
color-eyre.workspace          = true
comrak.workspace              = true
env_logger.workspace          = true
html-escape.workspace         = true
indicatif.workspace           = true
jiff.workspace                = true
log.workspace                 = true
num_cpus.workspace            = true
open.workspace                = true
rayon.workspace               = true
regex.workspace               = true
serde.workspace               = true
serde_json.workspace          = true
tera.workspace                = true
thiserror.workspace           = true
toml.workspace                = true

axum       = { workspace = true, optional = true, features = [ "tokio", "http1" ] }
tokio      = { workspace = true, optional = true, features = [ "rt-multi-thread", "net" ] }
tower-http = { workspace = true, optional = true, features = [ "fs" ] }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace  = true

[[bench]]
harness = false
name    = "postprocess"

[lints]
workspace = true
