[package]
name                   = "ndg-config"
description            = "Configuration types for NDG"
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true
publish                = false

[dependencies]
ndg-commonmark.workspace = true
ndg-macros.workspace     = true
ndg-templates.workspace  = true

log.workspace        = true
regex.workspace      = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
toml.workspace       = true


[lints]
workspace = true
