[package]
name        = "ndg-html"
description = "HTML output generation for NDG"
publish     = false

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
ndg-commonmark.workspace = true
ndg-config.workspace     = true
ndg-manpage.workspace    = true
ndg-nixdoc.workspace     = true
ndg-templates.workspace  = true
ndg-utils.workspace      = true

color-eyre.workspace  = true
grass.workspace       = true
html-escape.workspace = true
log.workspace         = true
rayon.workspace       = true
regex.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
tera.workspace        = true
walkdir.workspace     = true

[dev-dependencies]
tempfile.workspace = true
