[package]
name                   = "ndg-macros"
description            = "Proc-macros for NDG "
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true
publish                = false

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace       = true
syn.workspace         = true

[lints]
workspace = true
