[package]
name                   = "ndg-manpage"
description            = "Manpage output generation for NDG"
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true
publish                = false

[features]
default            = [ "commonmark-ndg" ]
commonmark-ndg     = [ "ndg-commonmark/ndg-flavored", "ndg-commonmark/syntastica", "ndg-utils/commonmark-ndg" ]
commonmark-nixpkgs = [ "ndg-commonmark/nixpkgs", "ndg-utils/commonmark-nixpkgs" ]

[dependencies]
ndg-commonmark.workspace = true
ndg-utils.workspace      = true

color-eyre.workspace = true
jiff.workspace       = true
log.workspace        = true
rayon.workspace      = true
regex.workspace      = true
serde.workspace      = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
