[package]
name                   = "ndg-nixdoc"
description            = "RFC145 nixdoc parser component for NDG"
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true
publish                = false

[dependencies]
log.workspace       = true
nixdoc.workspace    = true
rnix.workspace      = true
rowan.workspace     = true
serde.workspace     = true
thiserror.workspace = true
walkdir.workspace   = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
