[package]
name                   = "ndg-pdf"
description            = "PDF output generation for NDG"
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true
publish                = false

[features]
commonmark-ndg     = [ "ndg-commonmark/ndg-flavored", "ndg-commonmark/syntastica", "ndg-utils/commonmark-ndg" ]
commonmark-nixpkgs = [ "ndg-commonmark/nixpkgs", "ndg-utils/commonmark-nixpkgs" ]
default            = [ "commonmark-ndg" ]

[dependencies]
color-eyre.workspace     = true
html-escape.workspace    = true
ndg-commonmark.workspace = true
ndg-utils.workspace      = true
printpdf.workspace       = true
rustc-hash.workspace     = true
serde_json.workspace     = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
