[package]
name                   = "ndg-templates"
description            = "Embedded templates for NDG"
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true
publish                = false

[dependencies]
rustc-hash = "2.1.2"

[lints]
workspace = true
