[package]
name              = "xtask"
description       = "Build and development tasks for ndg"
version           = "0.1.0"
edition.workspace = true
publish           = false

[dependencies]
anyhow.workspace        = true
clap.workspace          = true
clap_complete.workspace = true
clap_mangen.workspace   = true
ndg                    = { workspace = true, features = [ "commonmark-ndg" ] }
